dogs website 2.0.0 add unit test

--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon -L",
-    "test": "mocha -w ./tests/**/*.spec.js"
+    "test": "mocha -w ./tests/routes/dog.spec.js",
+    "test-routes": "mocha -w ./tests/routes/dog.spec.js"
   },
   "author": "Henry",
   "license": "ISC",
@@ -28,8 +29,8 @@
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "mocha": "^8.2.1",
+    "chai": "^4.3.6",
+    "mocha": "^8.4.0",
     "nodemon": "^2.0.6",
     "supertest": "^6.0.1",
     "supertest-session": "^4.1.0"
